--- a/css/About.css
+++ b/css/About.css
@@ -89,13 +89,13 @@
   height: 40px;
   gap: 10px;
   border-radius: 6px;
-  border: none;
+  border: 2px solid #274C5B;
   display: flex;
   align-items: center;
   justify-content: center;
   box-shadow: 0px 3px 10px 0px rgba(89, 89, 89, 0.743);
 }
 .about__block-button button:hover {
-  box-shadow: 0px 3px 10px 0px rgb(80, 80, 80);
-  background-color: #073a50;
+  background-color: #F9F8F8;
+  color: #274C5B;
 }/*# sourceMappingURL=About.css.map */
