--- a/css/Toggle.css
+++ b/css/Toggle.css
@@ -21,7 +21,7 @@
   display: flex;
   align-items: center;
   background-color: #EFD372;
-  border: none;
+  border: 2px solid #274C5B;
   outline: none;
   padding: 6px 20px;
   font-size: 18px;
@@ -29,6 +29,12 @@
   border-radius: 10px;
   font-weight: 700;
   color: #274C5B;
+}
+.toggle__box-btn:hover {
+  color: #274C5B;
+  background-color: #FFFFFF;
+  border: 2px solid #EFD372;
+  transition: all 0.3s;
 }
 .toggle__cards {
   padding-top: 50px;
