--- a/src/pages/section/Section.scss
+++ b/src/pages/section/Section.scss
@@ -31,18 +31,22 @@
         }
         &-btn{
             background-color: #EFD372;
-            width:120px;
-            height: 40px;
+            color: #274C5B;
+            font-size: 14px;
+            font-weight: 600;
+            width:150px;
+            height: 50px;
             gap: 10px;
-            border-radius: 6px;
-            border: none;
+            border-radius: 8px;
+            border:2px solid #EFD372;
             display: flex;
             align-items:center;
             justify-content:center;
             box-shadow: 0px 3px 10px 0px rgba(137, 137, 137, 0.699);
             &:hover{
-                box-shadow: 0px 3px 10px 0px rgb(117, 115, 115);
-                background-color: #fbdf55;
+                // box-shadow: 0px 3px 10px 0px rgb(117, 115, 115);
+                transition:all 0.3s;
+                background-color:#FFF;
             }
         }
     }
